Attempt to fix issue with zooming out on mobile

--- a/src/LinkBlog.Web/wwwroot/app.css
+++ b/src/LinkBlog.Web/wwwroot/app.css
@@ -1,5 +1,7 @@
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 /* Base background colors for all screen sizes */
